<resources>
    <string name="app_name">ExpenseTrackerApp</string>
    <string name="profile_icon">profile icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_invite">Don\'t have an account? Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="sign_out">Sign Out</string>
    <string name="app_welcome_paragraph">Welcome to Expense Tracker!\n\nTake control of your money effortlessly with our smart expense management tool.\n\nTrack your spending, set budgets and make informed financial decisions - All in one place!
    </string>
    <string name="get_started">Get Started</string>
    <!-- main activity strings -->
    <string name="my_expenses">My Expenses</string>
    <!-- home strings -->
    <string name="expense_description">Expense Description</string>
    <string name="date_sample">01/01/2000</string>
    <string name="date_range_sample">01/01/2000 – 01/01/2005</string>
    <string name="amount_sample">50₪</string>
    <string name="amount_zero_sample">0.00 ₪</string>
    <string name="spent">Spent</string>
    <string name="date_label">Date</string>
    <!-- filter strings -->
    <string name="filter">Filter</string>
    <string name="show_results">Show Results</string>
    <string name="filter_header">Choose Categories</string>
    <!-- menu strings -->
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="categories">Categories</string>
    <!-- categories strings -->
    <string name="new_category">New Category</string>
    <string name="icon_label">Icon:</string>
    <string name="name_label">Name:</string>
    <!-- settings strings -->
    <string name="apply">Apply</string>
    <string name="clear_expenses">Clear All Expenses</string>
    <string name="are_you_sure">Are you sure that you want to clear all your expenses?</string>
    <string name="yes">Yes</string>
    <string name="close">Close</string>
    <!-- statistics strings -->
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="no_expenses">You don\'t have any expenses!</string>
    <!-- categories strings -->
    <string name="category_name">Food</string>
    <!-- popup strings -->
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add Category</string>
    <string name="edit">Edit</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="category">Category:</string>
    <string name="amount">Amount:</string>
    <string name="category_edit_text">category</string>
    <string name="description_edit_text">description</string>
    <string name="amount_edit_text">amount</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="new_expense">New Expense</string>
</resources>