<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_add_expense_outer_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black">

    <LinearLayout
        android:id="@+id/popup_add_expense_content"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/popup_background"
        android:padding="16dp">

        <TextView
            android:id="@+id/popup_add_expense_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_expense"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"/>

            <DatePicker
                android:id="@+id/popup_add_expense_date_picker"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/popup_add_expense_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_input_background"
                android:gravity="center"
                android:hint="@string/description_edit_text"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/popup_add_expense_category_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:background="@drawable/edit_text_input_background"
                android:clickable="true"
                android:gravity="center"
                android:focusable="false"
                android:hint="@string/category_edit_text"
                android:inputType="none"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/popup_add_expense_amount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:background="@drawable/edit_text_input_background"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:hint="@string/amount_edit_text"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/popup_add_expense_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/add"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/popup_add_expense_remove_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/red"
                android:text="@string/remove"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
