<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Profile Icon -->
    <ImageView
        android:id="@+id/activity_login_profile_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/account_circle"
        android:contentDescription="@string/profile_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop" />

    <!-- Email and Password in LinearLayout -->
    <LinearLayout
        android:id="@+id/activity_login_edit_texts_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/activity_login_profile_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <!-- Email EditText -->
        <EditText
            android:id="@+id/activity_login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/activity_login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:padding="12dp" />

        <!-- Confirm Password EditText -->
        <EditText
            android:id="@+id/activity_login_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:visibility="gone"/>

    </LinearLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/activity_login_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_edit_texts_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- "Don't have an account?" TextView -->
    <TextView
        android:id="@+id/activity_login_tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_invite"
        app:layout_constraintTop_toBottomOf="@id/activity_login_btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
