<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/get_started_background">

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/account_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputSection"/>

    <LinearLayout
        android:id="@+id/inputSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/login_input_section_background"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userIcon"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:background="@drawable/login_input_background"
            android:padding="10dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/login_input_background"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:background="@drawable/login_input_background"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColorDark"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_invite"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>