<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_add_expense_outer_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black">

    <LinearLayout
        android:id="@+id/popup_category_content"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/popup_background"
        android:padding="16dp">

        <TextView
            android:id="@+id/popup_category_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_category"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/icon_label"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/popup_category_icon_iv"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/ic_default_category"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/popup_category_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:background="@drawable/edit_text_input_background"
                android:gravity="center" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/popup_category_ok_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/add"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/popup_category_remove_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/red"
                android:text="@string/remove"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
