<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_clear_all_expenses_outer_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:gravity="center"
    android:background="@color/transparent_black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/popup_clear_all_expenses_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/popup_background">

        <TextView
            android:id="@+id/txtAreYouSure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/are_you_sure"/>

        <Button
            android:id="@+id/btnYes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnClose"
            app:layout_constraintTop_toBottomOf="@+id/txtAreYouSure"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primaryColor"
            android:textSize="18sp"
            android:text="@string/yes"/>

        <Button
            android:id="@+id/btnClose"
            app:layout_constraintStart_toEndOf="@+id/btnYes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAreYouSure"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primaryColor"
            android:textSize="18sp"
            android:text="@string/close"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>